Footer alignment issue resolving

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -104,7 +104,22 @@
   margin-top: 10px;
 }
 
-/* #searchFormError {
-  float: right;
-  margin-right: 180px;
-} */
+#searchFormError {
+  right: 75px;
+  position: absolute;
+  z-index: 2;
+}
+
+#footer {
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  line-height: 40px;
+}
+
+html {
+  min-height: 100%;
+  position: relative;
+}
